--- a/EPiMVP/EPiMVP.csproj
+++ b/EPiMVP/EPiMVP.csproj
@@ -62,11 +62,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EPiPresenter.cs" />
-    <Compile Include="EPiPresenterFactory.cs" />
-    <Compile Include="EPiView.cs">
+    <Compile Include="EPiMvpPage.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="EPiPresenter.cs" />
+    <Compile Include="EPiPresenterFactory.cs" />
     <Compile Include="IEPiView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
